--- a/jeux/style.css
+++ b/jeux/style.css
@@ -7,3 +7,8 @@ h1 {
   text-align: center;
   font-size: xxx-large;
 }
+
+canvas {
+    border:1px solid #d3d3d3;
+    background-color: #f1f1f1;
+}
